--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     align-items: center;
     display: flex;
     justify-content: flex-start;
-    margin-left: 3.5rem;
+    margin-left: 4.5rem;
 }
 
 .header__title__link {
@@ -25,8 +25,10 @@
 
 /* MENU */
 .menu {
-    display: flex;
     align-items: center;
+    display: flex;
+    hyphens: none;
+    margin-right: 4.5rem;
 }
 
 .menu__items {
@@ -79,24 +81,22 @@
 
 .hamburger-menu {
     display: none;
+    visibility: hidden;
 }
 
 .toggle {
     align-self: center;
     position: absolute;
     right: 4.5rem;
-    user-select: none;
 }
 
 .hamburger__toggle {
-    display: block;
     height: 32px;
     left: -5px;
     opacity: 0;
     position: absolute;
     top: -7px;
     width: 40px;
-    z-index: 9999;
 }
 
 .hamburger__items {
